--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ header h1 {
     font-size: 48px;
 }
 
-header h1 .seo {
+.seo {
     color: #d9dcd6;
 }
 
@@ -35,12 +35,12 @@ header nav {
 }
 
 /* changed div to nav */
-header nav ul {
+header ul {
     list-style-type: none;
 }
 
 /* changed div to nav */
-header nav ul li {
+header li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -90,13 +90,13 @@ main section {
     color: #ffffff;
 }
 
-/* unified all img's within main sections */
-main section img {
+/* unified all img's within main */
+main img {
     max-height: 200px;
 }
 
-/* unified all h2's within main sections */
-main section h2 {
+/* unified all h2's within main */
+main h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -119,14 +119,14 @@ aside section {
     color: #ffffff;
 }
 
-/* unified all h3's within aside sections */
-aside section h3{
+/* unified all h3's within aside */
+aside h3{
     margin-bottom: 10px;
     text-align: center;
 }
 
-/* unified all img's within aside sections */
-aside section img{
+/* unified all img's within aside */
+aside img{
     display: block;
     margin: 10px auto;
     max-width: 150px;
